frontend/tests/cases/positive/instanceLinear.gr
interface Simple a (c : Nat) where
  simple : a [c] -> a [c]

data A = B

-- we should be able to use a linear pattern match here
instance Simple A 1 where
  simple [B] = [B]
